# rusty-sailor

./: .gitignore  Cargo.toml  README.md  default.ini  default.toml  rusty-sailor.toml  shell.nix  vendored.nix
.github/workflows/: main.yaml
nix/: sources.json
src/: config.rs  errors.rs  fs.rs  install_ctx.rs  installation_context.rs  lib.rs  logging.rs  main.rs  net.rs  pki.rs  prelude.rs  templates.rs  vendored.rs
src/components/: ca.rs  etcd.rs  global_validation.rs  mod.rs
src/pki/: ca.rs  cert.rs  io.rs  mod.rs
templates/etcd/: etcd.conf.yml  etcd.service
tests/: Vagrantfile
