[package]
name = "rusty_sailor"
version = "0.0.1"
authors = ["Aleksander Gondek"]
description = "Single-binary k8s installer for bare metal (one-node, multi-node)"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = [] }
config = { version = "0.10.1", features = ["toml"] }
log = { version = "0.4.11" }
openssl = { version = "0.10.30" }
rust-embed = { version = "5.6.0", features = ["debug-embed"] }
serde = { version = "1.0.116", features = ["derive"] }
simplelog = { version = "0.8.0", features = [] }
tar = { version = "0.4.30" }
